added whisper model base and speech analyzer